--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,12 +10,17 @@
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
           integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-    <title>Document</title>
+          
+     <link rel="stylesheet" media="screen" href="styles.css"/>
+     
+     
     
+    <title>Index</title>
 </head>
+
+
+
 <body>
-
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light" >
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
@@ -47,12 +52,11 @@
                     <span class="nav-link" th:text="${cartCount}">0</span>
                 </li>
             </ul>
-
         </div>
     </div>
 </nav>
 
-
+<img src = "C:/Users/rnagarajan/Documents/workspace-sts-3.9.18.RELEASE/ShoeMart/src/main/resources/static/images/logo.png" style="width:500px;height:600px;"></img>
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
