--- a/src/main/resources/templates/adminHome.html
+++ b/src/main/resources/templates/adminHome.html
@@ -24,6 +24,9 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto"></ul>
             <ul class="navbar-nav">
+            	<li class = "nav-item active">
+            	<a class = "nav-link" th:href = "@{/admin/listofusers}" href = '#'>List-of-users</a>
+            	</li>      	
                 <li class="nav-item active">
                     <a class="nav-link" th:href="@{/admin}" href="#">admin-home</a>
                 </li>
@@ -43,7 +46,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-sm-3 pt-3" >
-            <div class="card" style="background-color:white;">
+            <div class="card" style="background-color:whitae;">
                 <div class="card-body">
                     <h4 class="card-title">Categories</h4>
                     <p class="card-text">Manage the categories section here.</p>
