--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,10 +11,6 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
           integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
           
-     <link rel="stylesheet" media="screen" href="styles.css"/>
-     
-     
-    
     <title>Index</title>
 </head>
 
@@ -33,11 +29,14 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto"></ul>
             <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" th:href="@{/}" href="#">home</a>
+            <li class="nav-item active">
+                    <a class="nav-link" th:href="@{/admin}" href="#">Admin- Home</a>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" th:href="@{/shop}" href="#">shop</a>
+				<li class="nav-item active"><a class="nav-link"
+					th:href="@{/shop}" href="#">shop</a>
+				</li>
+				<li class="nav-item active">
+                    <a class="nav-link" th:href="@{/}" href="#">home</a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" sec:authorize="isAnonymous()" th:href="@{/login}" href="#">login</a>
@@ -56,7 +55,24 @@
     </div>
 </nav>
 
-<img src = "C:/Users/rnagarajan/Documents/workspace-sts-3.9.18.RELEASE/ShoeMart/src/main/resources/static/images/logo.png" style="width:500px;height:600px;"></img>
+	<div class="jumbotron text-center">
+		<h1 class="display-3" >Welcome to world's best online platform for Shoes</h1>
+		<p>
+			
+			<img class="img-rounded" th:src="@{/images/logo.png}"
+				src="../static/images/logo.png" alt="" width="auto" height="150"><BR>
+
+			
+			<mark>Founder - Ramkumar</mark>
+		</p>
+		
+	</div>
+
+
+           
+       
+     
+      
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
