--- a/src/main/resources/templates/listofusers.html
+++ b/src/main/resources/templates/listofusers.html
@@ -12,8 +12,6 @@
     <title>Document</title>
 </head>
 <body>
-
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light" >
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
@@ -26,53 +24,73 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto"></ul>
             <ul class="navbar-nav">
+                <li class = "nav-item active">
+            	<a class = "nav-link" th:href = "@{/admin/listofusers}" href = '#'>List-of-users</a>
+            	</li> 
                 <li class="nav-item active">
-                    <a class="nav-link" th:href="@{/}" href="#">home</a>
+                    <a class="nav-link" th:href="@{/admin}" href="#">admin-home</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" th:href="@{/shop}" href="#">shop</a>
+                    <a class="nav-link" th:href="@{/logout}" href="#">logout</a>
                 </li>
-
 
             </ul>
 
         </div>
     </div>
 </nav>
-<div class="container">
-    <div class="row">
-        <div class="col-sm-6">
-            <h2>Login</h2>
-            <p>Please fill out this to login</p>
-            <form th:action="@{/login}" method="post">
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" name="email" id="email" placeholder="Your Email" class="form-control form-control-lg">
-                </div>
+<hr>
 
-                <div class="form-group">
-                    <label for="password">Password</label>
-                    <input type="password" class="form-control form-control-lg" placeholder="Password" name="password" id="password">
-                </div>
-                <div th:if="${param.error}" class="alert alert-error text-danger">
-                    Invalid username or password.
-                </div>
 
-                <input type="submit" value="Login" class="btn btn-primary btn-block">
-                <br>
-                <span >Don't have an account <a class="linkControl" href="./register.html"
-                                                th:href="@{/register}">Register here</a></span>
-                <br>
-               
-            </form>
-            <br>
-            
-            
 
-        </div>
 
-    </div>
+
+ <form >   
+<div class = "form-inline">
+<h1 style = "font-family:georgia,garamond,serif;font-size:30px;font-style:bold; color: green">
+Search User :-    <input type = "text" name="Name" id="Name" required textbox placeholder = "search for user" class = "form-control" > </input>
+</h1>
+<br>
+
+<button type="submit" class="btn btn-primary">Search</button>
+  
+ 
 </div>
+<hr>
+</form>
+
+
+
+
+            
+
+
+
+    <table class="table">
+        <thead class="thead-light">
+        <tr>
+        	<th scope="col">SN</th>
+            <th scope="col">ID</th>
+            <th scope="col">First Name</th>
+            <th scope="col">Last Name</th>
+            <th scope="col">Email</th>
+        </tr>
+        </thead>
+        <tbody>
+
+        <tr th:each="user, iStat : ${allusers}">
+            <th scope="row" th:text="${iStat.index + 1}">1</th>
+            <td th:text="${user.id}">Larry</td>
+            <td th:text="${user.firstName}">Larry</td>
+            <td th:text=${user.lastName}>Larry</td>
+            <td th:text=${user.email}>Larry</td>
+ 
+            
+        </tr>
+        </tbody>
+    </table>
+
+
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
