--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -65,6 +65,8 @@
                 <div class="card wish-list pb-1">
                     <div class="card-body">
 
+			
+	<form th:action="@{/checkout}" th:object="${ordersplacedDTO}" method="post"   >
                         <h5 class="mb-2">Billing details</h5>
 
                         <!-- Grid row -->
@@ -76,7 +78,7 @@
                                 <!-- First name -->
                                 <div class="md-form md-outline mb-0 mb-lg-4">
                                     <label for="firstName">First name</label>
-                                    <input type="text" id="firstName" required class="form-control mb-0 mb-lg-2">
+                                    <input type="text" id="firstName" name = "firstname" required class="form-control mb-0 mb-lg-2">
                                 </div>
 
                             </div>
@@ -88,7 +90,7 @@
                                 <!-- Last name -->
                                 <div class="md-form md-outline">
                                     <label for="lastName">Last name</label>
-                                    <input type="text" id="lastName" required class="form-control">
+                                    <input type="text" id="lastname" name = "lastname" required class="form-control">
                                 </div>
 
                             </div>
@@ -111,45 +113,45 @@
                         <!-- Address Part 1 -->
                         <div class="md-form md-outline mt-2">
                             <label for="form14">Address (Line 1)</label>
-                            <input type="text" required id="form14" placeholder="House number and street name" class="form-control">
+                            <input type="text" required id="form14"  name = "address1" placeholder="House number and street name" class="form-control">
                         </div>
 
                         <!-- Address Part 2 -->
                         <div class="md-form md-outline mt-2">
                             <label for="form15">Address (Line 2)</label>
-                            <input type="text" id="form15" placeholder="Apartment, suite, unit etc. (optional)"
+                            <input type="text" id="form15" name = "address2" placeholder="Apartment, suite, unit etc. (optional)"
                                    class="form-control">
                         </div>
 
                         <!-- Postcode / ZIP -->
                         <div class="md-form md-outline mt-3">
                             <label for="form16">Postcode / ZIP</label>
-                            <input type="text" maxlength="6" minlength="6" required id="form16" class="form-control">
+                            <input type="text" name = "postcode" maxlength="6" minlength="6" required id="form16" class="form-control">
                         </div>
 
                         <!-- Town / City -->
                         <div class="md-form md-outline mt-2">
                             <label for="form17">Town / City</label>
-                            <input type="text" required id="form17" class="form-control">
+                            <input type="text" name = "city" required id="form17" class="form-control">
 
                         </div>
 
                         <!-- Phone -->
                         <div class="md-form md-outline mt-2">
                             <label for="form18">Phone</label>
-                            <input type="number" minlength="10" maxlength="10" required id="form18" class="form-control">
+                            <input type="number" name = "phone" minlength="10" maxlength="10" required id="form18" class="form-control">
                         </div>
 
                         <!-- Email address -->
                         <div class="md-form md-outline mt-2">
                             <label for="form19">Email address</label>
-                            <input type="email" required id="form19" class="form-control">
+                            <input type="email" name = "email" required id="form19" class="form-control">
                         </div>
 
                         <!-- Additional information -->
                         <div class="md-form md-outline mt-2">
                             <label for="form76">Additional information</label>
-                            <textarea id="form76" class="md-textarea form-control" rows="4"></textarea>
+                            <textarea id="form76" name = "additionalinfo" class="md-textarea form-control" rows="4"></textarea>
                         </div>
 
 
@@ -174,6 +176,7 @@
                             <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
                                 Amount Payable
                                 <span>₹<span th:text="${total}"></span></span>
+                                <input type="phone" name="amountpayable" th:value="*{total}" id="form18" class="form-control" th:field="*{total}">
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                                 Shipping
@@ -190,7 +193,7 @@
                             </li>
                         </ul>
 
-                        <form action="" method="post" th:action="@{/payNow}" >
+                        
                             <button type="submit"  class="btn btn-primary btn-block waves-effect waves-light">Pay Now</button>
                         </form>
 
