--- a/src/main/resources/templates/purchaseReport.html
+++ b/src/main/resources/templates/purchaseReport.html
@@ -24,12 +24,9 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto"></ul>
             <ul class="navbar-nav">
-            	<li class = "nav-item active">
+                <li class = "nav-item active">
             	<a class = "nav-link" th:href = "@{/admin/listofusers}" href = '#'>List-of-users</a>
-            	</li>      
-            	<li class="nav-item active">
-                    <a class="nav-link" th:href="@{/admin/purchasereport}" href="#">Purchase-Report</a>
-                </li>	
+            	</li> 
                 <li class="nav-item active">
                     <a class="nav-link" th:href="@{/admin}" href="#">admin-home</a>
                 </li>
@@ -42,35 +39,59 @@
         </div>
     </div>
 </nav>
-<div class="jumbotron text-center">
-    <h1 class="display-4">Welcome back, Admin</h1>
-    <p>Easily manage your data from this admin <mark>CMS</mark></p>
+<hr>
+  
+<h3 style = "font-family:georgia,garamond,serif;font-size:30px;font-style:bold; color: green">
+<h3>Filter the Orders based on date</h3>
+
+<form>
+<div class = "form-inline">
+Start Date :- <input type = "Date" name="startdate" id="startdate" required class = "form-control">
+End Date :- <input type = "Date" name="enddate" id="enddate" required class = "form-control">
+<input type = "submit" value = "Filter orders">
 </div>
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-sm-3 pt-3" >
-            <div class="card" style="background-color:whitae;">
-                <div class="card-body">
-                    <h4 class="card-title">Categories</h4>
-                    <p class="card-text">Manage the categories section here.</p>
-                    <a href="#" th:href="@{/admin/categories}" class="card-link btn btn-primary">Manage</a>
+</form>
+      
+<hr>
+<hr>
+<hr>
 
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-3 pt-3" >
-            <div class="card" style="background-color:white;">
-                <div class="card-body">
-                    <h4 class="card-title">Products</h4>
-                    <p class="card-text">Manage all the products here.</p>
-                    <a href="#" th:href="@{/admin/products}" class="card-link btn btn-primary">Manage</a>
+    <table class="table">
+        <thead class="thead-light">
+        <tr>
+        	<th scope="col">SN</th>
+            <th scope="col">First name</th>
+            <th scope="col">Last name</th>
+            <th scope="col">Address (Line 1)</th>
+            <th scope="col">Address (Line 2)</th>
+            <th scope="col">Postcode / ZIP</th>
+            <th scope="col">Town/City</th>
+            <th scope="col">Phone</th>
+            <th scope="col">Email address</th>
+            <th scope="col">Ordered Date</th>
+            
+           
+            
+        </tr>
+        </thead>
+        <tbody>
 
-                </div>
-            </div>
-        </div>
-
-    </div>
-</div>
+        <tr th:each="order, iStat : ${allorders}">
+            <th scope="row" th:text="${iStat.index + 1}">1</th>
+            <td th:text="${order.firstname}">Larry</td>
+            <td th:text="${order.lastname}">Larry</td>
+            <td th:text=${order.address1}>Larry</td>
+            <td th:text=${order.address2}>Larry</td>
+            <td th:text=${order.postcode}>Larry</td>
+            <td th:text=${order.city}>Larry</td>
+            <td th:text=${order.phone}>Larry</td>
+            <td th:text=${order.email}>Larry</td>
+            <td th:text=${order.orderplacedtime}>0.4</td>
+ 
+            
+        </tr>
+        </tbody>
+    </table>
 
 
 
