--- a/src/main/resources/templates/PaymentSuccessful.html
+++ b/src/main/resources/templates/PaymentSuccessful.html
@@ -51,8 +51,12 @@
     </div>
 </nav>
 <center>
-<h1>Payment Successful<h1><hr>
-<h2><a th:href="@{/shop}" href="#">Click here to continue shopping</a></h2>
+Payment Successful
+<hr>
+<a th:href="@{/shop}" href="#">Click here to continue shopping</a>
+<hr>
+<a th:href="@{/orderhistory}" href="#">Click here to see your order history</a>
+<hr>
 </center>
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
