--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -142,11 +142,7 @@
                             <input type="number" name = "phone" minlength="10" maxlength="10" required id="form18" class="form-control">
                         </div>
 
-                        <!-- Email address -->
-                        <div class="md-form md-outline mt-2">
-                            <label for="form19">Email address</label>
-                            <input type="email" name = "email" required id="form19" class="form-control">
-                        </div>
+                       
 
                         <!-- Additional information -->
                         <div class="md-form md-outline mt-2">
@@ -176,7 +172,7 @@
                             <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
                                 Amount Payable
                                 <span>₹<span th:text="${total}"></span></span>
-                                <input type="phone" name="amountpayable" th:value="*{total}" id="form18" class="form-control" th:field="*{total}">
+                                <input type="phone" name="amountpayable" disabled th:value="*{total}" id="form18" class="form-control" th:field="*{total}">
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                                 Shipping
