--- a/src/main/resources/templates/orderhistory.html
+++ b/src/main/resources/templates/orderhistory.html
@@ -12,8 +12,6 @@
     <title>Document</title>
 </head>
 <body>
-
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light" >
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
@@ -27,45 +25,60 @@
             <ul class="navbar-nav mr-auto"></ul>
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" th:href="@{/}" href="#">home</a>
+                    <a class="nav-link" th:href="@{/logout}" href="#">logout</a>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" th:href="@{/shop}" href="#">shop</a>
-                </li>
-               
+
             </ul>
 
         </div>
     </div>
 </nav>
-<div class="container">
-    <div class="row">
-        <div class="col-sm-6">
-            <h2>Login</h2>
-            <p>Please fill out this to login</p>
-            <form th:action="@{/login}" method="post">
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" name="email" id="email" placeholder="Your Email" class="form-control form-control-lg">
-                </div>
+<hr>
+  
 
-                <div class="form-group">
-                    <label for="password">Password</label>
-                    <input type="password" class="form-control form-control-lg" placeholder="Password" name="password" id="password">
-                </div>
-                <div th:if="${param.error}" class="alert alert-error text-danger">
-                    Invalid username or password.
-                </div>
+      
+<hr>
+<hr>
+<hr>
 
-                <input type="submit" value="Login" class="btn btn-primary btn-block">
-                <br>
-
-            </form>
+    <table class="table">
+        <thead class="thead-light">
+        <tr>
+        	<th scope="col">SN</th>
+            <th scope="col">First name</th>
+            <th scope="col">Last name</th>
+            <th scope="col">Address (Line 1)</th>
+            <th scope="col">Address (Line 2)</th>
+            <th scope="col">Postcode / ZIP</th>
+            <th scope="col">Town/City</th>
+            <th scope="col">Phone</th>
+            <th scope="col">Email address</th>
+            <th scope="col">Ordered Date</th>
             
-        </div>
+           
+            
+        </tr>
+        </thead>
+        <tbody>
 
-    </div>
-</div>
+        <tr th:each="order, iStat : ${allorders}">
+            <th scope="row" th:text="${iStat.index + 1}">1</th>
+            <td th:text="${order.firstname}">Larry</td>
+            <td th:text="${order.lastname}">Larry</td>
+            <td th:text=${order.address1}>Larry</td>
+            <td th:text=${order.address2}>Larry</td>
+            <td th:text=${order.postcode}>Larry</td>
+            <td th:text=${order.city}>Larry</td>
+            <td th:text=${order.phone}>Larry</td>
+            <td th:text=${order.email}>Larry</td>
+            <td th:text=${order.orderplacedtime}>0.4</td>
+ 
+            
+        </tr>
+        </tbody>
+    </table>
+
+
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
