--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -32,7 +32,8 @@
                 <li class="nav-item active">
                     <a class="nav-link" th:href="@{/shop}" href="#">shop</a>
                 </li>
-               
+
+
             </ul>
 
         </div>
@@ -59,7 +60,10 @@
 
                 <input type="submit" value="Login" class="btn btn-primary btn-block">
                 <br>
-
+                <span >Don't have an account <a class="linkControl" href="./register.html"
+                                                th:href="@{/register}">Register here</a></span>
+                <br>
+                
             </form>
             
         </div>
